--- a/front/assets/style/main.scss
+++ b/front/assets/style/main.scss
@@ -10,4 +10,8 @@
     .btn {
         @apply border-2 border-black inline-flex items-center justify-center text-center text-xl uppercase tracking-wider py-4 px-6 transform hover:-translate-y-px transition-all focus:ring focus:ring-offset-2 outline-none rounded-xl font-bold
     }
+
+    .nav-item{
+        @apply flex p-3 hover:bg-slate-100 whitespace-nowrap space-x-2 rounded-xl;
+    }
 }
